# reconnect

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
bench/: Cargo.toml
bench/src/: main.rs
bench/src/lib/: mod.rs
bench/src/lib/data_generator/: mod.rs  postgres.rs
datagen/: Cargo.toml
datagen/src/: main.rs
datagen/src/data_generator/: postgres_generator.rs
docker/: docker-compose.yml
examples/conf/: customer_diff_multi_store_postgres_full_table.yaml  customer_diff_multi_store_postgres_mysql_diff.yaml  customer_diff_multi_store_postgres_mysql_no_diff.yaml  customer_diff_multi_store_postgres_with_filter_conditions.yaml  customer_diff_multi_store_postgres_with_no_differences.yaml  customer_diff_multi_store_postgres_without_filter_conditions.yaml  customer_diff_multi_store_snowflake_no_diff.yaml  customer_diff_multi_store_snowflake_with_diff.yaml  customer_diff_multi_store_snowflake_with_diff_uuid_key.yaml  customer_diff_multi_store_snowflake_with_mysql.yaml  customer_diff_single_store_mysql.yaml  customer_diff_single_store_mysql_multi_keys.yaml  customer_diff_single_store_postgres.yaml  customer_diff_single_store_postgres_full_table.yaml  customer_diff_single_store_postgres_multi_keys.yaml  customer_diff_single_store_snowflake.yaml  customer_diff_single_store_snowflake_multi_keys.yaml  unit_customer_diff_postgres_single_store.yaml
reconnect-bench/: Cargo.toml
reconnect-bench/benches/: bench_main.rs
reconnect-bench/benches/benchmarks/: mod.rs  postgres_full_table.rs
reconnect-bench/criterion/data/main/postgres_full_table/multi_store/10000/: benchmark.cbor  measurement_230603000024.cbor  measurement_230603000147.cbor
reconnect-bench/criterion/data/main/postgres_full_table/single_store/10000/: benchmark.cbor  measurement_230603000007.cbor  measurement_230603000129.cbor
reconnect-bench/criterion/data/main/postgres_full_table/single_store/100000/: benchmark.cbor  measurement_230603000043.cbor
reconnect-bench/criterion/postgres_full_table/10000/report/: index.html
reconnect-bench/criterion/postgres_full_table/100000/report/: index.html
reconnect-bench/criterion/postgres_full_table/multi_store/10000/base/: tukey.json
reconnect-bench/criterion/postgres_full_table/multi_store/10000/change/: estimates.json
reconnect-bench/criterion/postgres_full_table/multi_store/10000/new/: benchmark.json  estimates.json  sample.json
reconnect-bench/criterion/postgres_full_table/multi_store/10000/report/: index.html
reconnect-bench/criterion/postgres_full_table/multi_store/100000/base/: sample.json  tukey.json
reconnect-bench/criterion/postgres_full_table/multi_store/100000/new/: benchmark.json  estimates.json
reconnect-bench/criterion/postgres_full_table/multi_store/100000/report/: index.html
reconnect-bench/criterion/postgres_full_table/multi_store/report/: index.html
reconnect-bench/criterion/postgres_full_table/report/: index.html
reconnect-bench/criterion/postgres_full_table/single_store/10000/base/: benchmark.json  estimates.json  sample.json
reconnect-bench/criterion/postgres_full_table/single_store/10000/change/: estimates.json
reconnect-bench/criterion/postgres_full_table/single_store/10000/new/: tukey.json
reconnect-bench/criterion/postgres_full_table/single_store/10000/report/: index.html
reconnect-bench/criterion/postgres_full_table/single_store/100000/base/: estimates.json  sample.json
reconnect-bench/criterion/postgres_full_table/single_store/100000/new/: benchmark.json  tukey.json
reconnect-bench/criterion/postgres_full_table/single_store/100000/report/: index.html
reconnect-bench/criterion/postgres_full_table/single_store/report/: index.html
reconnect-bench/criterion/report/: index.html
reconnect-bench/criterion/reports/: index.html
reconnect-bench/criterion/reports/postgres_full_table/: index.html
reconnect-bench/criterion/reports/postgres_full_table/10000/: index.html
reconnect-bench/criterion/reports/postgres_full_table/multi_store/10000/: history.html  index.html
reconnect-bench/criterion/reports/postgres_full_table/single_store/: index.html
reconnect-bench/criterion/reports/postgres_full_table/single_store/10000/: history.html  index.html
reconnect-bench/criterion/reports/postgres_full_table/single_store/100000/: index.html
reconnect-bench/src/: lib.rs  main.rs
reconnect-bench/src/data_generator/: postgres_generator.rs
reconnect-cli/: Cargo.toml
reconnect-core/: Cargo.toml
reconnect-core/benches/: mod.rs  single_source_postgres.rs
reconnect-core/src/: config.rs  differ.rs  lib.rs  multi_store_differ.rs  single_store_differ.rs
reconnect-core/src/store/: mod.rs  postgres_store.rs
reconnect-core/tests/: helpers.rs  test_multi_store_diff_postgres.rs  test_single_store_diff_postgres.rs
reconnect-datagen/: Cargo.toml
reconnect-datagen/src/: lib.rs  main.rs
reconnect-datagen/src/data_generator/: constants.rs  mod.rs
templates/: get_agg_count_checksum_postgres.sql  get_ids_and_checksums_for_segment_postgres.sql  get_rows_by_keys_postgres.sql  get_values_database_postgres.sql  single_store_diff_postgres.sql
templates/macros/: macro_compare_conditions.sql  macro_filter_conditions.sql  macro_get_compare_field.sql  macro_get_compare_field_with_alias.sql  macro_select_with_alias.sql  macro_select_with_alias_postgres.sql
