[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
rand = "0.8.5"
serial_test = "2.0"
csv = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.18.1"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
