[package]
name = "datagen"
version = "0.1.0"
edition = "2021"

[dependencies]

reconnect-core = { path = "../reconnect-core" }

env_logger = "0.10"
log = "0.4.0"
rand = "0.8.5"
serial_test = "2.0"
csv = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.18.1"
serde_yaml = "0.9"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4.0"

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.10"
