[package]
name = "reconnect-datagen"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4.0"
rand = "0.8.5"
csv = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.10"

